Changing the URLs for the site

--- a/ansible/enviornments/production/group_vars/all/main.yml
+++ b/ansible/enviornments/production/group_vars/all/main.yml
@@ -11,17 +11,16 @@ ssh_user_keys:
     ssh_key: https://github.com/sarah-savage.keys
 
 sites:
-  - site_name: wpconcierge.com
-    server_name: wpconcierge.com
-    server_alias: www.wpconcierge.com
-    doc_root: /var/www/wpconcierge.com
+  - site_name: wpc.wpconcierge.org
+    server_name: wpc.wpconcierge.org
+    server_alias:
+    doc_root: /var/www/wpc.wpconcierge.org
 
 certbot_create_if_missing: true
 certbot_certs:
   - email: sarah@wpconcierge.com
     domains:
-      - wpconcierge.com
-      - www.wpconcierge.com
+      - wpc.wpconcierge.org
 
 mysql_databases:
   - name: wpconcierge
