--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,14 +1,15 @@
 ---
-- hosts: all
-  roles:
-    - { role: common, become: yes }
-    - { role: user_management, become: yes }
-    - { role: geerlingguy.mysql, become: yes }
-    - { role: firewall_management, become: yes }
-    - { role: geerlingguy.certbot, become: yes }
+#- hosts: all
+#  roles:
+#    - { role: common, become: yes }
+#    - { role: user_management, become: yes }
+#    - { role: geerlingguy.mysql, become: yes }
+#    - { role: firewall_management, become: yes }
+#    - { role: geerlingguy.certbot, become: yes }
 
 - hosts: php83
   roles:
-    - { role: php83, become: yes }
-    - { role: nginx, become: yes }
-    - { role: wp-cli, become: yes }
+#    - { role: php83, become: yes }
+#    - { role: nginx, become: yes }
+#    - { role: wp-cli, become: yes }
+    - { role: install-wordpress, become: yes }
